--- a/CPCK/room/jade.html
+++ b/CPCK/room/jade.html
@@ -5,42 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/jade.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-</head>
-
-<body>
-    <div id="nav"></div>
-
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="../img/jade/pic1.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="../img/jade/pic2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="../img/jade/pic3.jpg" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-
-
-
-
-    <script src="../js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -50,6 +19,109 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/mainhotel.css">
+    <link rel="stylesheet" href="../css/jade.css">
+</head>
+
+<body>
+    <div id="nav"></div>
+
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+            <div class="carousel-item active" id="item">
+                <img src="../img/jade/pic1.jpg" class="d-block w-100" alt="Not found">
+            </div>
+            <div class="carousel-item " id="item">
+                <img src="../img/jade/pic2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item " id="item">
+                <img src="../img/jade/pic3.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#item" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#item" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <div class="description">
+        <div class="title">
+            <h1>HIEU HUYNH TIKTOK (HIEUHUYNH.HHL) FOR RENT (1BR- 17M) (2BR- 20M) (3BR- 28M), SHORT TERM: DAY-WEEK</h1>
+            <p>Lumiere Riverside Project - Hanoi Highway - An Phu Ward - District 2 - Ho Chi Minh
+            </p>
+        </div>
+        <div class="information">
+            <div>
+                <span>Price</span>
+                <h5>$2000/month</h5>
+            </div>
+            <div>
+                <span>Size</span>
+                <h5>77 m²</h5>
+            </div>
+            <div>
+                <span>Bedrooms</span>
+                <h5>2</h5>
+            </div>
+        </div>
+        <h1 style="font-weight: bold;">Description</h1>
+        <div class="illustrate">
+
+
+            <div class="long-term">
+                <h3>Long term rental by year</h3>
+                <ul>
+                    <li>1 bedroom | 52m² | With air conditioner & curtain: $700 | Full interior: $900.</li>
+                    <li>2 bedrooms | 77m² | With air conditioner & curtain: $800 | Full interior: $1050.</li>
+                    <li>3 bedrooms | 100m² | With air conditioner & curtain: $1100 | Full interior: $1500.</li>
+                </ul>
+            </div>
+            <div class="short-term">
+                <h3>Short term rental by day/week/month</h3>
+                <ul>
+                    <li>1 bedroom: $50/day</li>
+                    <li>2 bedrooms: $70/day</li>
+                </ul>
+
+            </div>
+            <div class="service">
+                <h3>Support for post-rental services:</h3>
+                <ul>
+                    <li>Cleaning by day/week/month</li>
+                    <li>Install curtains, drying racks, wifi</li>
+                    <li>Daily/monthly/yearly maid service</li>
+                </ul>
+            </div>
+
+            <div class="fee">
+                <h3>Service and utility fees:</h3>
+                <ul>
+                    <li>Management fee: Free for 5 years</li>
+                    <li>Overflow swimming pool, gym</li>
+                    <li>Bar</li>
+                    <li>Outdoor party hall</li>
+                    <li>Quiet office</li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+    <div class="buy-rent">
+        <div>
+            <button id="buy">BUY</button>
+            <button id="rent">RENT</button>
+            <button id="wishlist"><i class="fa-solid fa-heart"></i></button>
+        </div>
+
+    </div>
+
+
+
+
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
