--- a/CPCK/html/home.html
+++ b/CPCK/html/home.html
@@ -79,7 +79,7 @@
     </div>
 
 
-    <script src="../js/main.js"></script>
+    <script type="module" src="../js/main.js"></script>
     <script src="../js/home.js"></script>
     <script src="../js/data.js"></script>
     <script type="module" src="../js/firabase.js"></script>
