--- a/CPCK/html/register.html
+++ b/CPCK/html/register.html
@@ -13,14 +13,14 @@
     <div id="outline">
         <form id="register-form">
             <h1>Register</h1>
-            <input type="text" name="userName" id="name" placeholder="Enter username">
-            <div id="username-error"></div>
+            <input type="text" name="username" id="username" placeholder="Enter username">
+            <div id="username-error" class="error"></div>
             <input type="text" name="email" id="email" placeholder="Enter email">
-            <div id="email-error"></div>
+            <div id="email-error" class="error"></div>
             <input type="password" name="password" id="password" placeholder="Enter password">
-            <div id="password-error"></div>
-            <input type="password" name="confirmPassword" id="confirm-pasword" placeholder="Confirm password">
-            <div id="confirm-password-error"></div>
+            <div id="password-error" class="error"></div>
+            <input type="password" name="confirmPassword" id="confirm-password" placeholder="Confirm password">
+            <div id="confirm-password-error" class="error"></div>
             <button type="submit">Sign up</button>
             <p>Already have an account? <a href="../html/login.html">Click here</a> or <a href="../html/home.html">Back
                     to home</a></p>
@@ -28,8 +28,8 @@
     </div>
     
 
-    <script type="module" src="../js/firabase.js"></script>
-    <script type="module" src="../js/controller.js"></script>
+    <script type="module" src="../js/firebase.js"></script>
+    <script type="module" src="../js/register.js"></script>
     
 </body>
 
