update code sau buổi 12
trang thanh toán, đăng nhập, đăng xuất

--- a/CPCK/html/login.html
+++ b/CPCK/html/login.html
@@ -13,7 +13,7 @@
     <div id="outline">
         <form id="login-form">
             <h1>Login</h1>
-            <input type="text" name="userNameOrEmail" id="email" placeholder="Enter email">
+            <input type="text" name="email" id="email" placeholder="Enter email">
             <input type="password" name="password" id="password" placeholder="Enter password">
             <button type="submit">Sign in</button>
             <p>Not sign up yet? <a href="../html/register.html">Click here</a> or <a href="../html/home.html">Back to
