--- a/CPCK/html/home.html
+++ b/CPCK/html/home.html
@@ -82,7 +82,7 @@
     <script type="module" src="../js/main.js"></script>
     <script src="../js/home.js"></script>
     <script src="../js/data.js"></script>
-    <script type="module" src="../js/firabase.js"></script>
+    <script type="module" src="../js/firebase.js"></script>
 </body>
 
 </html>
