--- a/CPCK/html/room.html
+++ b/CPCK/html/room.html
@@ -41,7 +41,7 @@
 
     <script src="../js/allroom.js"></script>
     <script src="../js/data.js"></script>
-    <script type="module" src="../js/firabase.js"></script>
+    <script type="module" src="../js/firebase.js"></script>
 </body>
 
 </html>
