update code sau buổi 13
Thêm chức năng phân quyền người dùng admin-user

--- a/CPCK/html/home.html
+++ b/CPCK/html/home.html
@@ -83,6 +83,7 @@
     <script src="../js/home.js"></script>
     <script src="../js/data.js"></script>
     <script type="module" src="../js/firebase.js"></script>
+    <script type="module" src="../js/register.js"></script>
 </body>
 
 </html>
