--- a/CPCK/html/rent.html
+++ b/CPCK/html/rent.html
@@ -22,6 +22,10 @@
             <div>
                 <input type="text" name="email" id="email" placeholder="Your email">
             </div>
+            <div>
+                <p>Total price:</p>
+                <div id="price"></div>
+            </div>
             <button type="submit" id="submit-rent-button">Rent</button>
             <a href="../html/home.html">Back to home</a>
         </form>
