--- a/CPCK/html/info.html
+++ b/CPCK/html/info.html
@@ -102,7 +102,7 @@
             celebrate innovation and inspire future generations of artists.</p>
     </div>
 
-    <script src="../js/main.js"></script>
+    <script type="module" src="../js/main.js"></script>
 </body>
 
 </html>
