--- a/CPCK/html/login.html
+++ b/CPCK/html/login.html
@@ -16,7 +16,7 @@
             <input type="text" name="email" id="email" placeholder="Enter email">
             <input type="password" name="password" id="password" placeholder="Enter password">
             <button type="submit">Sign in</button>
-            <p>Not sign up yet? <a href="../html/register.html">Click here</a> or <a href="../html/home.html">Back to
+            <p>Not sign up yet? <a href="../html/register.html">Register</a> or <a href="../html/home.html">Back to
                     home</a></p>
         </form>
     </div>
