--- a/CPCK/html/register.html
+++ b/CPCK/html/register.html
@@ -22,7 +22,7 @@
             <input type="password" name="confirmPassword" id="confirm-password" placeholder="Confirm password">
             <div id="confirm-password-error" class="error"></div>
             <button type="submit">Sign up</button>
-            <p>Already have an account? <a href="../html/login.html">Click here</a> or <a href="../html/home.html">Back
+            <p>Already have an account? <a href="../html/login.html">Login</a> or <a href="../html/home.html">Back
                     to home</a></p>
         </form>
     </div>
