--- a/CPCK/html/room.html
+++ b/CPCK/html/room.html
@@ -15,21 +15,12 @@
     <div id="nav"></div>
 
     <div class="content">
-        <div class="content-content" >
-            <div class="title">
-                <span>All rooms</span>
-            </div>
-            <div id="content"></div>
+        <div id="content-search">
+            <h1>All room</h1>
         </div>
-        <div class="content-sort">
-            <h1>Choose location</h1>
-            <ul>
-                <li><a href="../html/hanoi.html">Hanoi</a></li>
-                <li><a href="../html/saigon.html">Ho Chi Minh City</a></li>
-                <li><a href="../html/danang.html">Da Nang</a></li>
-                <li><a href="../html/hoian.html">Hoi An</a></li>
-                <li><a href="../html/nhatrang.html">Nha Trang</a></li>
-            </ul>
+        <div class="content-content">
+            <div id="content"></div>
+            <div id="add-room"></div>
         </div>
     </div>
 
@@ -37,9 +28,9 @@
 
 
 
-    <script src="../js/main.js"></script>
+    <script type="module" src="../js/main.js"></script>
 
-    <script src="../js/allroom.js"></script>
+    <script type="module" src="../js/allroom.js"></script>
     <script src="../js/data.js"></script>
     <script type="module" src="../js/firebase.js"></script>
 </body>
