--- a/CPCK/html/admin.html
+++ b/CPCK/html/admin.html
@@ -47,7 +47,7 @@
 
 
     <script type="module" src="../js/firebase.js"></script>
-    <script src="../js/main.js"></script>
+    <script type="module" src="../js/main.js"></script>
     <script type="module" src="../js/user.js"></script>
 </body>
 </html>
