--- a/CPCK/html/room-admin.html
+++ b/CPCK/html/room-admin.html
@@ -27,7 +27,7 @@
 
 
 
-    <script src="../js/main.js"></script>
+    <script type="module" src="../js/main.js"></script>
     <script type="module" src="../js/admin.js"></script>
     <script src="../js/data.js"></script>
     <script type="module" src="../js/firebase.js"></script>
