Update trước thuyết trình
Sửa một số lỗi

--- a/CPCK/html/buy.html
+++ b/CPCK/html/buy.html
@@ -23,6 +23,7 @@
                 <input type="text" name="email" id="email" placeholder="Your email">
             </div>
             <button type="submit" id="submit-buy-button">Buy now</button>
+            <a href="../room/jade.html">Back</a>
         </form>
     </div>
         
