--- a/CPCK/html/rent.html
+++ b/CPCK/html/rent.html
@@ -23,7 +23,7 @@
                 <input type="text" name="email" id="email" placeholder="Your email">
             </div>
             <button type="submit" id="submit-rent-button">Rent</button>
-            <a href="../html/home.html">Back to home</a>
+            <a href="../room/jade.html">Back</a>
         </form>
     </div>
         
