--- a/CPCK/html/room.html
+++ b/CPCK/html/room.html
@@ -11,7 +11,6 @@
 
 <body>
 
-
     <div id="nav"></div>
 
     <div class="content">
@@ -19,17 +18,15 @@
             <h1>All room</h1>
         </div>
         <div class="content-content">
-            <div id="content"></div>
+            <div id="content">
+            </div>
             <div id="add-room"></div>
         </div>
     </div>
 
 
-
-
-
     <script type="module" src="../js/main.js"></script>
-
+    <script type="module" src="../js/deleteroom.js"></script>
     <script type="module" src="../js/allroom.js"></script>
     <script src="../js/data.js"></script>
     <script type="module" src="../js/firebase.js"></script>
